[gd_scene load_steps=12 format=3 uid="uid://dqkrjn0mak6lh"]

[ext_resource type="Texture2D" uid="uid://bwxx0wr0tfjj8" path="res://addons/agent/icons/delete.svg" id="1_viqqn"]
[ext_resource type="Script" uid="uid://c0gayflg4ovas" path="res://addons/agent/ui/input_container.gd" id="1_xi1dg"]
[ext_resource type="Texture2D" uid="uid://dqf82stl4f3bh" path="res://addons/agent/icons/send_message.svg" id="2_xi1dg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi1dg"]
bg_color = Color(0.04303915, 0.043039158, 0.043039113, 0.38039216)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ot7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5v6i3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cpi8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elhta"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xi1dg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c8smv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5t7oo"]

[node name="InputContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_xi1dg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InputMenuList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xi1dg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ot7o")
allow_search = false
auto_height = true

[node name="ReferenceList" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UserInput" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_5v6i3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cpi8b")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_elhta")
placeholder_text = "输入问题，或拖拽添加引用。"
drag_and_drop_selection_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true
caret_multiple = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputModeSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xi1dg")
flat = true
selected = 0
item_count = 2
popup/item_0/text = "Agent"
popup/item_0/id = 0
popup/item_1/text = "Ask"
popup/item_1/id = 1

[node name="UseThinking" type="CheckButton" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xi1dg")
button_pressed = true
text = "思考"
flat = true

[node name="UsageLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "清空输入内容"
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_c8smv")
text = "      "
icon = ExtResource("1_viqqn")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "发送"
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_5t7oo")
text = "      "
icon = ExtResource("2_xi1dg")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/HBoxContainer/InputModeSelect" to="." method="_on_input_mode_select_item_selected"]
